[gd_scene load_steps=4 format=3 uid="uid://6a4ac2dlcdyx"]

[ext_resource type="Script" path="res://scenes/Menus/choose_games.gd" id="1_4n2il"]
[ext_resource type="Theme" uid="uid://dqdpb1lan45tv" path="res://ui/ui.tres" id="2_hq20f"]
[ext_resource type="Texture2D" uid="uid://bqql5ya3jqlb" path="res://New Assets/scene_backgrounds/main_menu.png" id="3_3jwwr"]

[node name="Choose Games" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_hq20f")
script = ExtResource("1_4n2il")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.568627)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3jwwr")

[node name="Games" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -103.0
offset_right = -4.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.06951, 2.55863)

[node name="Game 1" type="Button" parent="Games"]
layout_mode = 2
text = "Game 1"

[node name="Game 2" type="Button" parent="Games"]
layout_mode = 2
text = "Game 2"

[node name="Game 3" type="Button" parent="Games"]
layout_mode = 2
text = "Game 3"

[node name="Create Game" type="Button" parent="Games"]
layout_mode = 2
text = "Create Game"

[node name="Main Menu" type="Button" parent="Games"]
layout_mode = 2
text = "Back"

[node name="Info" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.525
anchor_bottom = 0.3
offset_left = -20.0
offset_top = -8.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Select a game or create a custom game. "
horizontal_alignment = 1

[connection signal="pressed" from="Games/Game 1" to="." method="_on_game_1_pressed"]
[connection signal="pressed" from="Games/Game 2" to="." method="_on_game_2_pressed"]
[connection signal="pressed" from="Games/Game 3" to="." method="_on_game_3_pressed"]
[connection signal="pressed" from="Games/Create Game" to="." method="_on_create_game_pressed"]
[connection signal="pressed" from="Games/Main Menu" to="." method="_on_button_pressed"]
